@@ -1,5 +1,7 @@
 **pnp-0.6.3 ??/??/2010**
 
+  * Template: New template check_hpasm.php
+
 **pnp-0.6.2 12/23/2009**
 
   * Feature: XML_WRITE_DELAY option added to process_perfdata.cfg as suggested by Mathias Kettner
